fix board feet calculator container not stretching to full viewport height

--- a/src/styles/boardFootCalculator.module.scss
+++ b/src/styles/boardFootCalculator.module.scss
@@ -2,6 +2,7 @@
 @use 'mixins';
 
 .container {
+	min-height: 100vh;
 	height: 100%;
 	overflow-y: auto;
 	background-color: variables.$background-color;
